@@ -247,6 +247,7 @@ See match-a-pattern.rkt for more details
       [`natural (void)]
       [`integer (void)]
       [`real (void)]
+      [`boolean (void)]
       [`variable (void)]
       [`(variable-except ,s ...) (void)]
       [`(variable-prefix ,s) (void)]
@@ -286,6 +287,7 @@ See match-a-pattern.rkt for more details
       [`natural pat]
       [`integer pat]
       [`real pat]
+      [`boolean pat]
       [`variable pat]
       [`(variable-except ,s ...) pat]
       [`(variable-prefix ,s) pat]
@@ -322,6 +324,7 @@ See match-a-pattern.rkt for more details
          [`natural #f]
          [`integer #f]
          [`real #f]
+         [`boolean #f]
          [`variable #f] 
          [`(variable-except ,vars ...) #f]
          [`(variable-prefix ,var) #f]
@@ -464,6 +467,7 @@ See match-a-pattern.rkt for more details
          [`natural untouched-pattern]
          [`integer untouched-pattern]
          [`real untouched-pattern]
+         [`boolean untouched-pattern]
          [`variable untouched-pattern] 
          [`(variable-except ,vars ...) untouched-pattern]
          [`(variable-prefix ,var) untouched-pattern]
@@ -569,7 +573,8 @@ See match-a-pattern.rkt for more details
       [`natural #f]
       [`integer #f]
       [`real #f]
-      [`variable #f] 
+      [`boolean #f]
+      [`variable #f]
       [`(variable-except ,vars ...) #f]
       [`(variable-prefix ,var) #f]
       [`variable-not-otherwise-mentioned #f]
@@ -603,6 +608,7 @@ See match-a-pattern.rkt for more details
       [`natural #t]
       [`integer #t]
       [`real #t]
+      [`boolean #t]
       [`variable #t]
       [`(variable-except ,vars ...) #t]
       [`(variable-prefix ,prefix) #t]
@@ -764,6 +770,7 @@ See match-a-pattern.rkt for more details
       [`natural (simple-match exact-nonnegative-integer?)]
       [`integer (simple-match exact-integer?)]
       [`real (simple-match real?)]
+      [`boolean (simple-match boolean?)]
       [`variable (simple-match symbol?)]
       [`(variable-except ,vars ...)
        (simple-match
@@ -1816,6 +1823,7 @@ See match-a-pattern.rkt for more details
       [`natural ribs]
       [`integer ribs]
       [`real ribs]
+      [`boolean ribs]
       [`variable ribs]
       [`(variable-except ,vars ...) ribs]
       [`(variable-prefix ,vars) ribs]
