@@ -52,6 +52,9 @@
     (test-empty 'real 'x #f)
     (test-empty 'real '() #f)
     (test-empty 'real 2+3i #f)
+    (test-empty 'boolean #t (list (make-test-mtch (make-bindings (list)) #t none)))
+    (test-empty 'boolean #f (list (make-test-mtch (make-bindings (list)) #f none)))
+    (test-empty 'boolean 'x #f)
     (test-empty '(name string string) "a" (list (make-test-mtch (make-bindings (list (make-bind 'string "a"))) "a" none)))
     (test-empty 'string 1 #f)
     (test-empty 'string '() #f)
